[metadata]
name = insidecocuhbase
version = 0.0.2
author = Huseyin Demir
author_email = huseyin.d3r@gmail.com
description = A simple Python package
long_description = file: README.md, LICENSE.txt
long_description_content_type = text/markdown
url = https://github.com/adiosamig/insidepgs
project_urls =
    Bug Tracker = https://github.com/adiosamig/insidepgs/issues
    repository = https://github.com/adiosamig/insidepgs
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src